<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorAccent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>

        <TextView
            android:id="@+id/textBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:text="@string/weather"
            android:textColor="?attr/primaryTextColor"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintStart_toEndOf="@+id/switch1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutBar"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cloud_sun"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/textView"
            style="@style/TextView.Primary"
            android:text="@string/_33"
            android:fontFamily="sans-serif-black"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon">

        </TextView>

        <TextView
            android:id="@+id/textView2"
            style="@style/TextView.Primary"
            android:text="@string/london_uk_n_sunny"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTop"
        android:layout_marginTop="15dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/constraintLayoutBot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radius"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewWindFLow"
                    style="@style/TextView.Numbers"
                    android:text="@string/_55" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/wind_40" />

                <TextView
                    style="@style/TextView.Primary"
                    android:textSize="20sp"
                    android:text="@string/wind_flow"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="?attr/colorAccent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCloudy"
                    style="@style/TextView.Numbers"
                    android:text="@string/_30"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/humidity_40" />

                <TextView
                    style="@style/TextView.Primary"
                    android:text="@string/cloudy"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radiusr"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewHumidity"
                    style="@style/TextView.Numbers"
                    android:text="@string/_42"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/precipitation_40" />

                <TextView
                    style="@style/TextView.Primary"
                    android:textSize="20sp"
                    android:text="@string/humidity" />

            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutBot1">

            <LinearLayout

                android:id="@+id/directchild"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@drawable/radius"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/MD" />

                    <ImageView
                        android:id="@+id/imgPN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/sun_64" />

                    <TextView
                        android:id="@+id/textViewTempPN"
                        style="@style/TextView.Primary"
                        android:text="@string/_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="?attr/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/TD" />

                    <ImageView
                        android:id="@+id/imgVT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/cloud_sun_64" />

                    <TextView
                        android:id="@+id/textViewTempVT"
                        style="@style/TextView.Primary"
                        android:text="@string/_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="?attr/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/WD" />

                    <ImageView
                        android:id="@+id/imgSR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/cloud_rain_64" />

                    <TextView
                        android:id="@+id/textViewTempSR"
                        style="@style/TextView.Primary"
                        android:text="@string/_10" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="?attr/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/ThD" />

                    <ImageView
                        android:id="@+id/imgCT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/cloud_flash_64" />

                    <TextView
                        android:id="@+id/textViewTempCT"
                        style="@style/TextView.Primary"
                        android:text="@string/_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="?attr/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/FD" />

                    <ImageView
                        android:id="@+id/imgPT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/cloud_sun_64" />

                    <TextView
                        android:id="@+id/textViewTempPT"
                        style="@style/TextView.Primary"
                        android:text="@string/_5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="?attr/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/StD" />

                    <ImageView
                        android:id="@+id/imgSB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/cloud_snow_64" />

                    <TextView
                        android:id="@+id/textViewTempSB"
                        style="@style/TextView.Primary"
                        android:text="@string/__5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@drawable/radiusr"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Primary"
                        android:text="@string/SnD" />

                    <ImageView
                        android:id="@+id/imgVS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/cloud_snow_64" />

                    <TextView
                        android:id="@+id/textViewTempVS"
                        style="@style/TextView.Primary"
                        android:text="@string/_13" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>